  (Gabriel Scherer, review by François Bobot, report by Rob Hoes)

- PR#7222: Escaped existential type
  (Jacques Garrigue, report by Florian Angeletti)

- PR#7230: Scrutinee discarded in match with only refutation cases
  (Jacques Garrigue, report by Jeremy Yallop)

- PR#7234: Compatibility check wrong for abstract type constructors
  (Jacques Garrigue, report by Stephen Dolan)

- GPR#205: Clear caml_backtrace_last_exn before registering as root
  (report and fix by Frederic Bour)

- GPR#220: minor -dsource error on recursive modules
  (Hongbo Zhang)

- GPR#228: fix a dangling internal pointer in (bytecode )debug_info
  (Gabriel Scherer and Mark Shinwell and Xavier Leroy)

- GPR#233: Make CamlinternalMod.init_mod robust to optimization
  (Pierre Chambart, Mark Shinwell)

- GPR#249: fix a few hardcoded ar commands
  (Daniel Bünzli)

- GPR#251: fix cross-compilation with ocamldoc enabled
  (whitequark)

- GPR#280: Fix stdlib dependencies for .p.cmx
  (Pierre Chambart, Mark Shinwell)

- GPR#283: Fix memory leaks in intern.c when OOM is raised
  (Marc Lasson, review by Alain Frisch)

- GPR#22: Fix the cleaning of weak pointers. In very rare cases
  accessing a value during the cleaning of the weak pointers could
  result in the value being removed from one weak arrays and kept in
  another one. That breaks the property that a value is removed from a
  weak pointer only when it is dead and garbage collected.
  (François Bobot, review by Damien Doligez)

- GPR#313: Prevent quadratic cases in CSE
  (Pierre Chambart, review by Xavier Leroy)

- PR#6795, PR#6996: Make ocamldep report errors passed in
  [%ocaml.error] extension points
  (Jérémie Dimino)

- GPR#355: make ocamlnat build again
  (Jérémie Dimino, Thomas Refis)

- GPR#405: fix compilation under Visual Studio 2015
  (David Allsopp)

- GPR#441: better type error location in presence of type constraints
  (Thomas Refis, report by Arseniy Alekseyev)
